infra/k8s/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: dev
  labels:
    app: demo-app
spec:
  type: ClusterIP
  selector:
    app: demo-app
  ports:
    - name: http
      port: 80       # service port
      targetPort: 80 # containerPort in your deployment
